# irs25-26

./: .env  .gitignore  LlamaParse.ipynb  README.md  output.md  pyproject.toml
data/: text working.md  text.md
data/chapters/: chapter5.md
data/working/: text working.md
src/: app.py  chunking.py  eval.py  hybrid_parser.py  prompt.py  test_questions.py
utils/: consolidate.py
