[project]
name = "irs-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.5",
    "docling>=2.30.0",
    "jupyter>=1.1.1",
    "llama-cloud-services>=0.6.12",
    "llama-index-core>=0.12.31",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.3.37",
    "llama-index-readers-file>=0.4.7",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-parse>=0.6.12",
    "notebook>=7.4.0",
    "pymupdf4llm>=0.0.21",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]
